fix: use whole-number tempos and remove redundant note label